improved document